--- a/.env.example
+++ b/.env.example
@@ -6,12 +6,21 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
+# mysql setting
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mariaDB
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=project_foodie
 DB_USERNAME=root
 DB_PASSWORD=
+
+# mongo setting
+#DB_CONNECTION=mongodb
+#DB_HOST=mongoDB
+#DB_PORT=27017
+#DB_DATABASE=project_foodie
+#DB_USERNAME=root
+#DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -19,7 +28,7 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
