Install xdebug extension(phpunit coverage needs it)

--- a/docker/nginx-php/Dockerfile
+++ b/docker/nginx-php/Dockerfile
@@ -8,6 +8,9 @@ RUN apt-get update \
     && pecl install mongodb \
     && echo "extension=mongodb.so" > ${PHP_CONF_DIR}/fpm/conf.d/30-mongodb.ini \
     && echo "extension=mongodb.so" > ${PHP_CONF_DIR}/cli/conf.d/30-mongodb.ini \
+    && yes | pecl install xdebug \
+    && echo "zend_extension=$(find /usr/lib/php/ -name xdebug.so)" > ${PHP_CONF_DIR}/fpm/conf.d/30-xdebug.ini \
+    && echo "zend_extension=$(find /usr/lib/php/ -name xdebug.so)" > ${PHP_CONF_DIR}/cli/conf.d/30-xdebug.ini \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
